--- a/reliable-style-tile.html
+++ b/reliable-style-tile.html
@@ -52,12 +52,12 @@
           <h1 class="h1-sample">A sample header</h1>
           <p class="font-details-h1">
             <span class="font-name">Days One</span>,
-            <span class="font-color">#f9d502</span>
+            <span class="font-color">#313e59</span>
           </p>
           <h2 class="h2-sample">An example of a sub header</h2>
           <p class="font-details-h2">
             <span class="font-name">Monserrat</span>,
-            <span class="font-color">#9d9d9d</span>
+            <span class="font-color">#313e59</span>
           </p>
           <p class="typography-sample">
             This sample paragraph has <strong>strong parts</strong> and
@@ -68,15 +68,15 @@
             netus et malesuada fames ac turpis egestas.
           </p>
           <p class="font-details-p">
-            <span class="font-name">Font Name</span>,
-            <span class="font-color">#9d9d9d</span>
+            <span class="font-name">Montserrat</span>,
+            <span class="font-color">#2e3948</span>
           </p>
           <a href="#" class="typography-sample"
             >This is an example of a text link.</a
           >
           <p class="font-details-a">
-            <span class="font-name">Font Name</span>,
-            <span class="font-color">#color value</span>
+            <span class="font-name">Montserrat</span>,
+            <span class="font-color">#313e59, 600</span>
           </p>
         </section>
       </div>
