feat: updated styling and colors

--- a/reliable-style-tile.html
+++ b/reliable-style-tile.html
@@ -52,12 +52,12 @@
           <h1 class="h1-sample">A sample header</h1>
           <p class="font-details-h1">
             <span class="font-name">Days One</span>,
-            <span class="font-color">#313e59</span>
+            <span class="font-color">#313e59, 3rem</span>
           </p>
           <h2 class="h2-sample">An example of a sub header</h2>
           <p class="font-details-h2">
             <span class="font-name">Monserrat</span>,
-            <span class="font-color">#313e59</span>
+            <span class="font-color">#313e59, 1.6rem</span>
           </p>
           <p class="typography-sample">
             This sample paragraph has <strong>strong parts</strong> and
@@ -69,7 +69,7 @@
           </p>
           <p class="font-details-p">
             <span class="font-name">Montserrat</span>,
-            <span class="font-color">#2e3948</span>
+            <span class="font-color">#2e3948, 1rem</span>
           </p>
           <a href="#" class="typography-sample"
             >This is an example of a text link.</a
